# metagenomics-api-service

./: .dockerignore  .gitignore  Dockerfile  README.md  countries.csv  docker-compose.yml  manage.py  migrate_and_seed.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
api/: .env.example  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
api/settings/: base.py  production.py
api_service/: settings.py  urls.py
api_service/settings/: base.py
authentication/: serializers.py  urls.py
authentication/views/: __init__.py  auth.py  register.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py
nextflow/: env.yml
project/: admin.py  models.py  seeds.py  serializers.py  signals.py  tasks.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_initial.py
project/views/: __init__.py  analysis.py  annotation.py  assembler.py  assembly.py  directory.py  file_download.py  project.py  sample.py  sequencing_method.py  sequencing_read_type.py
seed/: 0001_CountrySeeder.json  0002_SequencingReadType.json  0003_SequencingMethodSeeder.json
study/: admin.py  apps.py  models.py  serializers.py  signals.py
study/views/: __init__.py  study.py
task/: models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_status_alter_task_type.py  0004_alter_task_status.py
task/views/: __init__.py  manager.py  task.py
user/: models.py  serializers.py  urls.py  views.py
utils/: file_upload.py  handle_uploaded_file.py  remove_directory.py  remove_work_dir.py
(+3 files in other folders)
